gitops_apps/hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-quay
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 3
  minReadySeconds: 30
  progressDeadlineSeconds: 60
  replicas: 3
  selector:
    matchLabels:
      app: hello-quay
  template:
    metadata:
      labels:
        app: hello-quay
    spec:
      containers:
      - name: hello-quay
        image: quay.io/redhattraining/do480-hello-app:v1.0
        #image: quay.io/redhattraining/do480-hello-app:latest
        #image: quay.io/redhattraining/do480-hello-app:NOT_A_VERSION
