gitops_apps/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-quay
spec:
  ports:
  - port: 8080
  selector:
    name: hello-quay
