gitops_apps/hello-world/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-quay
  labels: {}
spec:
#  host: hello-quay.apps.ocp4.example.com
#  subdomain: ''
  to:
    kind: Service
    name: hello-quay
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
  tls:
    termination: edge
